@@ -1,20 +1,0 @@
-TAGLIB_REQ_VERSION="0.95";
-AC_DEFUN(VERSION_TO_NUMBER, [`$1 | awk 'BEGIN { FS = "."; } { printf "%d",  ([$]1* 1000 + [$]2) * 1000 + [$]3;}'`])
-
-if test "x$have_taglib" = "xfalse"; then
-	echo ""
-	echo "You're missing TagLib, which is required by amaroK.  You can find"
-	echo "taglib either in KDE's CVS under kdeextragear-2/taglib or at"
-	echo "http://ktown.kde.org/~wheeler/taglib/"
-
-	DO_NOT_COMPILE="$DO_NOT_COMPILE amarok"
-else
-	if test VERSION_TO_NUMBER(echo $taglib_version) -lt VERSION_TO_NUMBER(echo $TAGLIB_REQ_VERSION); then
-		echo ""
-		echo "Your TagLib is too old to use with amaroK.  You can find a more"
-		echo "recent taglib either in KDE's CVS under kdeextragear-2/taglib or at"
-		echo "http://ktown.kde.org/~wheeler/taglib/"
-
-		DO_NOT_COMPILE="$DO_NOT_COMPILE amarok"
-	fi
-fi
